--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,4 @@ gateway.ip=172.30.25.10
 token.expiration_time=864000
 token.secret=qyuterhsy1234
 login.url=/users-ws/login
+token.expiration=8880000
